docs: add design system storybook integration (#275)
related to #133

--- a/package.json
+++ b/package.json
@@ -132,7 +132,9 @@
     "@commitlint/config-conventional": "7.1.2",
     "@storybook/addon-a11y": "4.0.0-alpha.25",
     "@storybook/addon-actions": "4.0.0-alpha.25",
+    "@storybook/addon-console": "1.0.8",
     "@storybook/addon-links": "4.0.0-alpha.25",
+    "@storybook/addon-options": "3.4.11",
     "@storybook/addons": "4.0.0-alpha.25",
     "@storybook/vue": "4.0.0-alpha.25",
     "@types/animejs": "2.0.0",
@@ -150,6 +152,7 @@
     "@types/serve-favicon": "2.2.30",
     "@types/storybook__addon-a11y": "3.3.1",
     "@types/storybook__addon-actions": "3.4.1",
+    "@types/storybook__addon-options": "3.2.2",
     "@types/storybook__vue": "3.3.1",
     "@types/webpack": "4.4.17",
     "@types/webpack-dev-middleware": "2.0.2",
