--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "serve-favicon": "2.5.0",
     "vee-validate": "2.0.9",
     "vue": "2.5.17",
-    "vue-i18n": "8.2.1",
+    "vue-i18n": "8.3.0",
     "vue-meta": "1.5.5",
     "vue-router": "3.0.1",
     "vue-server-renderer": "2.5.17",
@@ -130,13 +130,13 @@
     "@babel/core": "7.1.2",
     "@commitlint/cli": "7.2.1",
     "@commitlint/config-conventional": "7.1.2",
-    "@storybook/addon-a11y": "4.0.0-alpha.25",
-    "@storybook/addon-actions": "4.0.0-alpha.25",
-    "@storybook/addon-console": "1.0.8",
-    "@storybook/addon-links": "4.0.0-alpha.25",
-    "@storybook/addon-options": "3.4.11",
-    "@storybook/addons": "4.0.0-alpha.25",
-    "@storybook/vue": "4.0.0-alpha.25",
+    "@storybook/addon-a11y": "4.0.0",
+    "@storybook/addon-actions": "4.0.0",
+    "@storybook/addon-console": "1.1.0",
+    "@storybook/addon-links": "4.0.0",
+    "@storybook/addon-options": "4.0.0",
+    "@storybook/addons": "4.0.0",
+    "@storybook/vue": "4.0.0",
     "@types/animejs": "2.0.0",
     "@types/body-parser": "1.17.0",
     "@types/compression": "0.0.36",
@@ -144,11 +144,11 @@
     "@types/deepmerge": "2.2.0",
     "@types/express": "4.16.0",
     "@types/glob": "7.1.1",
-    "@types/jest": "23.3.5",
+    "@types/jest": "23.3.8",
     "@types/js-cookie": "2.2.0",
     "@types/lodash": "4.14.117",
     "@types/marked": "0.4.2",
-    "@types/node": "10.12.0",
+    "@types/node": "10.12.1",
     "@types/serve-favicon": "2.2.30",
     "@types/storybook__addon-a11y": "3.3.1",
     "@types/storybook__addon-actions": "3.4.1",
@@ -158,7 +158,7 @@
     "@types/webpack-dev-middleware": "2.0.2",
     "@types/webpack-merge": "4.1.3",
     "@vue/test-utils": "1.0.0-beta.25",
-    "autoprefixer": "9.2.1",
+    "autoprefixer": "9.3.1",
     "axios-mock-adapter": "1.15.0",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.4",
@@ -169,12 +169,12 @@
     "concurrently": "4.0.1",
     "copy-webpack-plugin": "4.5.4",
     "cross-env": "5.2.0",
-    "css-loader": "1.0.0",
+    "css-loader": "1.0.1",
     "css-mqpacker": "7.0.0",
     "cssnano": "4.1.7",
     "cypress": "3.1.0",
     "file-loader": "2.0.0",
-    "fork-ts-checker-webpack-plugin": "0.4.10",
+    "fork-ts-checker-webpack-plugin": "0.4.14",
     "generate-changelog": "1.7.1",
     "glob": "7.1.3",
     "html-webpack-plugin": "3.2.0",
@@ -185,8 +185,8 @@
     "node-sass": "4.9.4",
     "plop": "2.1.0",
     "postcss-loader": "3.0.0",
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
+    "react": "16.6.0",
+    "react-dom": "16.6.0",
     "rimraf": "2.6.2",
     "sass-loader": "7.1.0",
     "serviceworker-webpack-plugin": "1.0.1",
@@ -201,7 +201,7 @@
     "vue-loader": "15.4.2",
     "vue-ssr-webpack-plugin": "3.0.0",
     "vue-template-compiler": "2.5.17",
-    "webpack": "4.22.0",
+    "webpack": "4.23.1",
     "webpack-bundle-analyzer": "3.0.3",
     "webpack-cli": "3.1.2",
     "webpack-dev-middleware": "3.4.0",
