--- a/package.json
+++ b/package.json
@@ -216,7 +216,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS",
-      "pre-commit": "concurrently \"npm run lint\" \"npm run test:coverage -- --silent\""
+      "pre-commit": "concurrently \"npm run lint\" \"npm run test:coverage\""
     }
   }
 }
