refactor(webpack): clean up configs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "allowJs": true
   },
   "include": ["./src/**/*", "./src/**/*.vue"],
   "exclude": ["./node_modules", "./dist"]
