--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-starter",
   "version": "1.4.0",
-  "description": "A flexible, scalable, opinionated boilerplate for production-ready PWAs with focus on performance, development speed, and best practices",
+  "description": "The most complete boilerplate for production-ready PWAs. With focus on performance, development speed, and best practices",
   "repository": {
     "type": "git",
     "url": "https://github.com/devCrossNet/vue-starter.git"
