--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -128,6 +128,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "rizwanzaheer",
+      "name": "Rizwan Zaheer",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/13586702?v=4",
+      "profile": "https://github.com/rizwanzaheer",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
