docs: update contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -103,6 +103,15 @@
       ]
     },
     {
+      "login": "livgrhm",
+      "name": "Olivia Graham",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/3798005?v=4",
+      "profile": "http://livgrhm.com",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
       "login": "hugomn",
       "name": "Hugo Magalhães",
       "avatar_url": "https://avatars3.githubusercontent.com/u/497957?v=4",
