--- a/package.json
+++ b/package.json
@@ -63,14 +63,14 @@
     "marked": "0.5.2",
     "serve-favicon": "2.5.0",
     "vee-validate": "2.0.9",
-    "vue": "2.5.21",
+    "vue": "^2.5.21",
     "vue-i18n": "8.6.0",
     "vue-meta": "1.5.8",
-    "vue-router": "3.0.2",
-    "vue-server-renderer": "2.5.21",
-    "vue-starter-vuex-persist": "1.0.0-beta.3",
-    "vuex": "3.0.1",
-    "vuex-router-sync": "5.0.0",
+    "vue-router": "^3.0.2",
+    "vue-server-renderer": "^2.5.21",
+    "vue-starter-vuex-persist": "^1.0.0-beta.5",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0",
     "winston": "3.1.0"
   },
   "devDependencies": {
@@ -94,8 +94,8 @@
     "node-sass": "4.11.0",
     "ts-jest": "22.4.6",
     "typescript": "3.2.2",
-    "vue-starter-service": "1.0.0-beta.3",
-    "vue-template-compiler": "2.5.21"
+    "vue-starter-service": "^1.0.0-beta.5",
+    "vue-template-compiler": "^2.5.21"
   },
   "engines": {
     "node": "10.14.1",
