--- a/package.json
+++ b/package.json
@@ -50,52 +50,54 @@
   },
   "dependencies": {
     "accept-language": "3.0.18",
-    "animejs": "2.2.0",
+    "animejs": "3.0.1",
     "axios": "0.18.0",
     "body-parser": "1.18.3",
     "compression": "1.7.3",
     "config": "3.0.1",
     "cookie-parser": "1.4.3",
-    "deepmerge": "3.0.0",
+    "deepmerge": "3.1.0",
     "express": "4.16.4",
     "lodash": "4.17.11",
     "lru-cache": "5.1.1",
-    "marked": "0.5.2",
+    "marked": "0.6.0",
     "serve-favicon": "2.5.0",
     "vee-validate": "2.0.9",
     "vue": "^2.6.4",
-    "vue-i18n": "8.6.0",
+    "vue-i18n": "8.8.1",
     "vue-meta": "1.5.8",
     "vue-router": "^3.0.2",
     "vue-server-renderer": "^2.6.4",
     "vue-starter-vuex-persist": "^1.0.0-beta.10",
     "vuex": "^3.1.0",
     "vuex-router-sync": "^5.0.0",
-    "winston": "3.1.0"
+    "winston": "3.2.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "7.2.1",
-    "@commitlint/config-conventional": "7.1.2",
+    "@commitlint/cli": "7.5.1",
+    "@commitlint/config-conventional": "7.5.0",
     "@types/animejs": "2.0.1",
     "@types/body-parser": "1.17.0",
     "@types/compression": "0.0.36",
     "@types/cookie-parser": "1.4.1",
-    "@types/express": "4.16.0",
-    "@types/jest": "23.3.10",
-    "@types/lodash": "4.14.119",
-    "@types/marked": "0.5.0",
-    "@types/node": "10.12.18",
+    "@types/express": "4.16.1",
+    "@types/jest": "24.0.0",
+    "@types/lodash": "4.14.120",
+    "@types/marked": "0.6.0",
+    "@types/node": "10.12.24",
     "@types/serve-favicon": "2.2.30",
     "@vue/test-utils": "1.0.0-beta.27",
-    "axios-mock-adapter": "1.15.0",
+    "axios-mock-adapter": "1.16.0",
     "codecov": "3.1.0",
     "husky": "1.3.1",
     "identity-obj-proxy": "3.0.0",
     "node-sass": "4.11.0",
-    "ts-jest": "22.4.6",
-    "typescript": "3.2.2",
-    "vue-starter-service": "^1.0.0-beta.10",
-    "vue-template-compiler": "^2.6.4"
+    "ts-jest": "23.10.5",
+    "typescript": "3.3.3",
+    "vue-starter-service": "^1.0.0-beta.11",
+    "vue-template-compiler": "^2.6.4",
+    "webpack-dev-middleware": "3.5.2",
+    "webpack-hot-middleware": "2.24.3"
   },
   "engines": {
     "node": "10.14.1",
@@ -109,7 +111,10 @@
   },
   "jest": {
     "globals": {
-      "window": true
+      "window": true,
+      "ts-jest": {
+        "tsConfig": "tsconfig.test.json"
+      }
     },
     "rootDir": ".",
     "roots": [
@@ -127,7 +132,7 @@
     },
     "transform": {
       ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest",
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest"
+      ".(ts|tsx)": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "coverageThreshold": {
@@ -148,6 +153,8 @@
       "text",
       "lcov",
       "json"
-    ]
+    ],
+    "preset": "ts-jest",
+    "testMatch": null
   }
 }
