refactor: switch to vuesion org (#348)
related to #316, related to #317

--- a/.vuesion/config.json
+++ b/.vuesion/config.json
@@ -1,7 +1,7 @@
 {
   "currentVersion": "v2.1.0",
   "generators": {
-    "blueprintDirectory": "./.vue-starter/generators",
+    "blueprintDirectory": "./.vuesion/generators",
     "outputDirectory": "./src/app",
     "routerFile": "./src/app/router.ts",
     "stateFile": "./src/app/state.ts"
