--- a/package.json
+++ b/package.json
@@ -26,29 +26,30 @@
     "url": "https://github.com/devCrossNet/vue-starter/issues"
   },
   "scripts": {
-    "dev": "vue-starter-service dev",
-    "generate": "vue-starter-service g",
-    "add": "vue-starter-service add",
-    "extract-i18n-messages": "vue-starter-service em",
-    "test": "vue-starter-service test --coverage",
-    "e2e": "vue-starter-service e2e",
-    "lint": "vue-starter-service lint",
-    "clean": "vue-starter-service clean",
-    "storybook:dev": "vue-starter-service storybook --dev",
-    "storybook:build": "vue-starter-service storybook",
-    "update": "vue-starter-service update",
-    "prettier": "vue-starter-service prettier",
-    "release:major": "vue-starter-service release --major --silent",
-    "release:minor": "vue-starter-service release --minor --silent",
-    "release:patch": "vue-starter-service release --patch --silent",
-    "build": "vue-starter-service build",
-    "build:analyze": "vue-starter-service build --analyze",
-    "build:spa": "vue-starter-service build --spa",
+    "dev": "vuesion dev",
+    "generate": "vuesion g",
+    "add": "vuesion add",
+    "extract-i18n-messages": "vuesion em",
+    "test": "vuesion test --coverage",
+    "e2e": "vuesion e2e",
+    "lint": "vuesion lint",
+    "clean": "vuesion clean",
+    "storybook:dev": "vuesion storybook --dev",
+    "storybook:build": "vuesion storybook",
+    "update": "vuesion update",
+    "prettier": "vuesion prettier",
+    "release:major": "vuesion release --major --silent",
+    "release:minor": "vuesion release --minor --silent",
+    "release:patch": "vuesion release --patch --silent",
+    "build": "vuesion build",
+    "build:analyze": "vuesion build --analyze",
+    "build:spa": "vuesion build --spa",
     "start": "node ./dist/server/server.js",
-    "ci": "vue-starter-service parallel \"npm run lint -- --silent\" \"npm run test -- --silent\"",
-    "postci": "codecov -f ./coverage/*.json && vue-starter-service parallel \"npm run build -- --silent\" \"npm run storybook:build -- --silent\" \"vuepress build docs\""
+    "ci": "vuesion parallel \"npm run lint -- --silent\" \"npm run test -- --silent\"",
+    "postci": "codecov -f ./coverage/*.json && vuesion parallel \"npm run build -- --silent\" \"npm run storybook:build -- --silent\" \"vuepress build docs\""
   },
   "dependencies": {
+    "@vuesion/addon-vuex-persist": "^1.0.0-alpha.0",
     "accept-language": "3.0.18",
     "animejs": "3.0.1",
     "axios": "0.18.0",
@@ -68,7 +69,6 @@
     "vue-meta": "1.5.8",
     "vue-router": "^3.0.2",
     "vue-server-renderer": "^2.6.4",
-    "vue-starter-vuex-persist": "^1.0.0-beta.10",
     "vuex": "^3.1.0",
     "vuex-router-sync": "^5.0.0",
     "winston": "3.2.1"
@@ -87,6 +87,7 @@
     "@types/node": "10.12.24",
     "@types/serve-favicon": "2.2.30",
     "@vue/test-utils": "1.0.0-beta.27",
+    "@vuesion/service": "^1.0.0-alpha.0",
     "axios-mock-adapter": "1.16.0",
     "codecov": "3.1.0",
     "husky": "1.3.1",
@@ -94,7 +95,6 @@
     "node-sass": "4.11.0",
     "ts-jest": "23.10.5",
     "typescript": "3.3.3",
-    "vue-starter-service": "^1.0.0-beta.11",
     "vue-template-compiler": "^2.6.4",
     "webpack-dev-middleware": "3.5.2",
     "webpack-hot-middleware": "2.24.3"
@@ -106,7 +106,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS",
-      "pre-commit": "vue-starter-service parallel \"vue-starter-service prettier --staged\" \"npm run lint\" \"npm run test\""
+      "pre-commit": "vuesion parallel \"vuesion prettier --staged\" \"npm run lint\" \"npm run test\""
     }
   },
   "jest": {
