docs: update contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -146,6 +146,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "rgrosjean",
+      "name": "rgrosjean",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/39985706?v=4",
+      "profile": "https://github.com/rgrosjean",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
