--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "url": "https://github.com/devCrossNet/vue-starter/issues"
   },
   "scripts": {
-    "dev": "vuesion dev",
-    "generate": "vuesion g",
+    "dev": "vuesion dev -o",
+    "generate": "vuesion generate",
     "add": "vuesion add",
-    "extract-i18n-messages": "vuesion em",
+    "extract-i18n-messages": "vuesion extract-i18n-messages",
     "test": "vuesion test --coverage",
     "e2e": "vuesion e2e",
     "lint": "vuesion lint",
@@ -50,7 +50,7 @@
     "postci": "vuesion parallel \"npm run build\" \"npm run storybook:build\" \"./node_modules/.bin/vuepress build docs\""
   },
   "dependencies": {
-    "@vuesion/addon-vuex-persist": "^1.0.0-alpha.1",
+    "@vuesion/addon-vuex-persist": "^1.0.1",
     "accept-language": "3.0.18",
     "animejs": "3.0.1",
     "axios": "0.18.0",
@@ -88,7 +88,7 @@
     "@types/node": "10.12.24",
     "@types/serve-favicon": "2.2.30",
     "@vue/test-utils": "1.0.0-beta.27",
-    "@vuesion/service": "^1.0.0-alpha.1",
+    "@vuesion/service": "^1.0.1",
     "axios-mock-adapter": "1.16.0",
     "husky": "1.3.1",
     "identity-obj-proxy": "3.0.0",
