refactor: add prop validators (#367)
closes #359

--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "storybook:build": "vuesion storybook",
     "update": "vuesion update",
     "prettier": "vuesion prettier",
-    "release:major": "vuesion release --major --silent",
-    "release:minor": "vuesion release --minor --silent",
-    "release:patch": "vuesion release --patch --silent",
+    "release:major": "vuesion release --major",
+    "release:minor": "vuesion release --minor",
+    "release:patch": "vuesion release --patch",
     "build": "vuesion build",
     "build:analyze": "vuesion build --analyze",
     "build:spa": "vuesion build --spa",
