--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,6 +1,6 @@
 {
-  "projectName": "vue-starter",
-  "projectOwner": "devCrossNet",
+  "projectName": "vuesion",
+  "projectOwner": "vuesion",
   "repoType": "github",
   "repoHost": "https://github.com",
   "files": [
@@ -152,6 +152,15 @@
       "name": "rgrosjean",
       "avatar_url": "https://avatars3.githubusercontent.com/u/39985706?v=4",
       "profile": "https://github.com/rgrosjean",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "MohitTilwani15",
+      "name": "Mohit Tilwani",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/13518712?v=4",
+      "profile": "MohitTilwani15",
       "contributions": [
         "code"
       ]
