chore: update contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -157,10 +157,10 @@
       ]
     },
     {
-      "login": "MohitTilwani15",
-      "name": "Mohit Tilwani",
-      "avatar_url": "https://avatars3.githubusercontent.com/u/13518712?v=4",
-      "profile": "MohitTilwani15",
+      "login": "bernardocorbella",
+      "name": "Bernardo Corbella",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/4535719?v=4",
+      "profile": "https://corbella.me",
       "contributions": [
         "code"
       ]
@@ -169,7 +169,7 @@
       "login": "MohitTilwani15",
       "name": "Mohit Tilwani",
       "avatar_url": "https://avatars3.githubusercontent.com/u/13518712?v=4",
-      "profile": "MohitTilwani15",
+      "profile": "http://mohittilwani.com",
       "contributions": [
         "code"
       ]
