chore: enforce LF line endings
related to #358

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Set the default behavior, in case people don't have core.autocrlf set.
-* text=auto
+* text=auto eol=lf
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
