--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "arrowParens": "always",
   "trailingComma": "all",
   "tabWidth": 2,
-  "printWidth": 120
+  "printWidth": 120,
+  "endOfLine": "lf"
 }
