feat: custom webpack aliases (#393)
closes #390

--- a/.vuesion/config.json
+++ b/.vuesion/config.json
@@ -13,5 +13,13 @@
   "clean": ["./dist", "./coverage", "./storybook-static"],
   "prettier": {
     "extensions": "ts,vue,js,json,scss,sass,css,yaml,yml"
+  },
+  "webpack": {
+    "aliases": {
+      "@": "src",
+      "@shared": "src/app/shared",
+      "@components": "src/app/shared/components",
+      "@static": "src/static"
+    }
   }
 }
