--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,10 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@shared/*": ["src/app/shared/*"],
+      "@components/*": ["src/app/shared/components/*"],
+      "@static/*": ["src/static/*"]
     },
     "rootDirs": ["src"]
   },
