chore: update contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -173,6 +173,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "eipiminus1",
+      "name": "eipiminus1 ",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/11791837?v=4",
+      "profile": "https://github.com/eipiminus1",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
