--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
     "build:spa": "vuesion build --spa",
     "start": "node ./dist/server/server.js",
     "e2e:ci": "./node_modules/.bin/start-server-and-test dev http://localhost:3000 e2e",
-    "ci": "vuesion parallel \"npm run lint\" \"npm run test -- --runInBand\" \"npm run e2e:ci\"",
+    "ci": "vuesion parallel \"npm run lint\" \"npm run test -- --runInBand\" \"npm run e2e:ci\" \"npm run build:spa\"",
     "postci": "vuesion parallel \"npm run build\" \"npm run storybook:build\" \"./node_modules/.bin/vuepress build docs\""
   },
   "dependencies": {
-    "@vuesion/addon-vuex-persist": "^2.0.0",
+    "@vuesion/addon-vuex-persist": "^2.1.1",
     "accept-language": "3.0.18",
     "animejs": "3.0.1",
     "axios": "0.18.0",
@@ -88,7 +88,7 @@
     "@types/node": "10.12.24",
     "@types/serve-favicon": "2.2.30",
     "@vue/test-utils": "1.0.0-beta.27",
-    "@vuesion/service": "^2.0.0",
+    "@vuesion/service": "^2.1.1",
     "axios-mock-adapter": "1.16.0",
     "husky": "1.3.1",
     "identity-obj-proxy": "3.0.0",
