--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -182,6 +182,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "jezmck",
+      "name": "Jez McKean",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/89996?v=4",
+      "profile": "http://jezmck.com",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
