--- a/package.json
+++ b/package.json
@@ -50,56 +50,52 @@
     "postci": "vuesion parallel \"npm run build\" \"npm run storybook:build\" \"npx vuepress build docs\""
   },
   "dependencies": {
-    "@vuesion/addon-vuex-persist": "^2.1.1",
+    "@vuesion/addon-vuex-persist": "^2.1.2",
     "accept-language": "3.0.18",
     "animejs": "3.0.1",
     "axios": "0.18.0",
-    "body-parser": "1.18.3",
-    "compression": "1.7.3",
-    "config": "3.0.1",
-    "cookie-parser": "1.4.3",
-    "deepmerge": "3.1.0",
+    "body-parser": "1.19.0",
+    "compression": "1.7.4",
+    "config": "3.1.0",
+    "cookie-parser": "1.4.4",
+    "deepmerge": "3.2.0",
     "express": "4.16.4",
     "lodash": "4.17.11",
     "lru-cache": "5.1.1",
-    "marked": "0.6.0",
+    "marked": "0.6.2",
     "serve-favicon": "2.5.0",
-    "start-server-and-test": "1.9.0",
     "vee-validate": "2.0.9",
     "vue": "^2.6.10",
-    "vue-i18n": "8.8.1",
-    "vue-meta": "1.5.8",
-    "vue-router": "^3.0.2",
+    "vue-i18n": "8.11.2",
+    "vue-meta": "1.6.0",
+    "vue-router": "^3.0.6",
     "vue-server-renderer": "^2.6.10",
-    "vuepress": "0.14.11",
     "vuex": "^3.1.0",
     "vuex-router-sync": "^5.0.0",
     "winston": "3.2.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "7.5.1",
+    "@commitlint/cli": "7.5.2",
     "@commitlint/config-conventional": "7.5.0",
-    "@types/animejs": "2.0.1",
+    "@types/animejs": "2.0.2",
     "@types/body-parser": "1.17.0",
     "@types/compression": "0.0.36",
     "@types/cookie-parser": "1.4.1",
     "@types/express": "4.16.1",
-    "@types/jest": "24.0.0",
-    "@types/lodash": "4.14.120",
-    "@types/marked": "0.6.0",
+    "@types/jest": "24.0.12",
+    "@types/lodash": "4.14.123",
+    "@types/marked": "0.6.5",
     "@types/node": "10.12.24",
     "@types/serve-favicon": "2.2.30",
-    "@vue/test-utils": "1.0.0-beta.27",
-    "@vuesion/service": "^2.1.1",
+    "@vue/test-utils": "1.0.0-beta.28",
+    "@vuesion/service": "^2.1.2",
     "axios-mock-adapter": "1.16.0",
-    "husky": "1.3.1",
+    "husky": "2.1.0",
     "identity-obj-proxy": "3.0.0",
-    "node-sass": "4.11.0",
-    "ts-jest": "23.10.5",
-    "typescript": "3.3.3",
-    "vue-template-compiler": "^2.6.10",
-    "webpack-dev-middleware": "3.5.2",
-    "webpack-hot-middleware": "2.24.3"
+    "node-sass": "4.12.0",
+    "ts-jest": "24.0.2",
+    "typescript": "3.4.5",
+    "vue-template-compiler": "^2.6.10"
   },
   "engines": {
     "node": "10.14.1",
