feat: add devServer watchOptions to vuesion cfg (#403)

--- a/.vuesion/config.json
+++ b/.vuesion/config.json
@@ -25,5 +25,11 @@
   "spa": {
     "appShellRoute": "/",
     "additionalRoutes": ["/form"]
+  },
+  "devServer": {
+    "watchOptions": {
+      "aggregateTimeout": 300,
+      "poll": false
+    }
   }
 }
