feat: support theming
closes #391

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "lru-cache": "5.1.1",
     "marked": "0.7.0",
     "serve-favicon": "2.5.0",
-    "vee-validate": "2.1.7",
+    "vee-validate": "2.0.9",
     "vue": "^2.6.10",
     "vue-i18n": "8.14.1",
     "vue-meta": "2.3.1",
@@ -92,7 +92,8 @@
     "@types/marked": "0.6.5",
     "@types/node": "10.12.24",
     "@types/serve-favicon": "2.2.31",
-    "@vue/test-utils": "1.1.0",
+    "@vue/test-utils": "1.0.0-beta.28",
+    "@vuesion/addon-theme-switcher": "^3.1.12",
     "@vuesion/service": "^3.1.2",
     "axios-mock-adapter": "1.17.0",
     "husky": "3.0.8",
