chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -53,13 +53,13 @@
     "@vuesion/addon-vuex-persist": "^2.3.0",
     "accept-language": "3.0.18",
     "animejs": "3.0.1",
-    "axios": "0.18.0",
+    "axios": "^0.19.0",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
     "config": "3.1.0",
     "cookie-parser": "1.4.4",
     "deepmerge": "3.2.0",
-    "express": "4.16.4",
+    "express": "4.17.1",
     "lodash": "4.17.11",
     "lru-cache": "5.1.1",
     "marked": "0.6.2",
@@ -70,31 +70,31 @@
     "vue-meta": "1.6.0",
     "vue-router": "^3.0.6",
     "vue-server-renderer": "^2.6.10",
-    "vuex": "^3.1.0",
+    "vuex": "^3.1.1",
     "vuex-router-sync": "^5.0.0",
     "winston": "3.2.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "7.5.2",
-    "@commitlint/config-conventional": "7.5.0",
+    "@commitlint/cli": "7.6.1",
+    "@commitlint/config-conventional": "7.6.0",
     "@types/animejs": "2.0.2",
     "@types/body-parser": "1.17.0",
     "@types/compression": "0.0.36",
     "@types/cookie-parser": "1.4.1",
     "@types/express": "4.16.1",
-    "@types/jest": "24.0.12",
-    "@types/lodash": "4.14.123",
+    "@types/jest": "24.0.13",
+    "@types/lodash": "4.14.132",
     "@types/marked": "0.6.5",
     "@types/node": "10.12.24",
     "@types/serve-favicon": "2.2.30",
     "@vue/test-utils": "1.0.0-beta.28",
     "@vuesion/service": "^2.3.0",
     "axios-mock-adapter": "1.16.0",
-    "husky": "2.1.0",
+    "husky": "2.3.0",
     "identity-obj-proxy": "3.0.0",
     "node-sass": "4.12.0",
     "ts-jest": "24.0.2",
-    "typescript": "3.4.5",
+    "typescript": "3.5.1",
     "vue-template-compiler": "^2.6.10"
   },
   "engines": {
