--- a/package.json
+++ b/package.json
@@ -51,50 +51,53 @@
   },
   "dependencies": {
     "@vuesion/addon-vuex-persist": "^2.3.0",
+    "@vuesion/models": "^3.0.0-alpha.6",
+    "@vuesion/utils": "^3.0.0-alpha.6",
+    "@vuesion/webpack": "^3.0.0-alpha.6",
     "accept-language": "3.0.18",
     "animejs": "3.0.1",
     "axios": "^0.19.0",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
-    "config": "3.1.0",
+    "config": "3.2.2",
     "cookie-parser": "1.4.4",
-    "deepmerge": "3.2.0",
+    "deepmerge": "4.0.0",
     "express": "4.17.1",
-    "lodash": "4.17.11",
+    "lodash": "4.17.15",
     "lru-cache": "5.1.1",
-    "marked": "0.6.2",
+    "marked": "0.7.0",
     "serve-favicon": "2.5.0",
     "vee-validate": "2.0.9",
     "vue": "^2.6.10",
-    "vue-i18n": "8.11.2",
-    "vue-meta": "1.6.0",
-    "vue-router": "^3.0.6",
+    "vue-i18n": "8.12.0",
+    "vue-meta": "2.0.5",
+    "vue-router": "^3.0.7",
     "vue-server-renderer": "^2.6.10",
     "vuex": "^3.1.1",
     "vuex-router-sync": "^5.0.0",
     "winston": "3.2.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "7.6.1",
-    "@commitlint/config-conventional": "7.6.0",
+    "@commitlint/cli": "8.1.0",
+    "@commitlint/config-conventional": "8.1.0",
     "@types/animejs": "2.0.2",
     "@types/body-parser": "1.17.0",
     "@types/compression": "0.0.36",
     "@types/cookie-parser": "1.4.1",
-    "@types/express": "4.16.1",
-    "@types/jest": "24.0.13",
-    "@types/lodash": "4.14.132",
+    "@types/express": "4.17.0",
+    "@types/jest": "24.0.15",
+    "@types/lodash": "4.14.136",
     "@types/marked": "0.6.5",
     "@types/node": "10.12.24",
     "@types/serve-favicon": "2.2.30",
     "@vue/test-utils": "1.0.0-beta.28",
-    "@vuesion/service": "^2.3.0",
-    "axios-mock-adapter": "1.16.0",
-    "husky": "2.3.0",
+    "@vuesion/service": "^3.0.0-alpha.6",
+    "axios-mock-adapter": "1.17.0",
+    "husky": "3.0.1",
     "identity-obj-proxy": "3.0.0",
     "node-sass": "4.12.0",
     "ts-jest": "24.0.2",
-    "typescript": "3.5.1",
+    "typescript": "3.5.3",
     "vue-template-compiler": "^2.6.10"
   },
   "engines": {
@@ -157,5 +160,10 @@
     ],
     "preset": "ts-jest",
     "testMatch": null
-  }
+  },
+  "browserslist": [
+    "> 2%",
+    "last 2 versions",
+    "IE >= 11"
+  ]
 }
