--- a/package.json
+++ b/package.json
@@ -50,12 +50,12 @@
     "postci": "vuesion parallel \"npm run build\" \"npm run storybook:build\""
   },
   "dependencies": {
-    "@vuesion/addon-vuex-persist": "^2.3.0",
-    "@vuesion/models": "^3.0.0-alpha.6",
-    "@vuesion/utils": "^3.0.0-alpha.6",
-    "@vuesion/webpack": "^3.0.0-alpha.6",
+    "@vuesion/addon-vuex-persist": "^3.0.0",
+    "@vuesion/models": "^3.0.0",
+    "@vuesion/utils": "^3.0.0",
+    "@vuesion/webpack": "^3.0.0",
     "accept-language": "3.0.18",
-    "animejs": "3.0.1",
+    "animejs": "3.1.0",
     "axios": "^0.19.0",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
@@ -70,7 +70,7 @@
     "vee-validate": "2.0.9",
     "vue": "^2.6.10",
     "vue-i18n": "8.12.0",
-    "vue-meta": "2.0.5",
+    "vue-meta": "2.2.1",
     "vue-router": "^3.0.7",
     "vue-server-renderer": "^2.6.10",
     "vuex": "^3.1.1",
@@ -85,15 +85,15 @@
     "@types/compression": "0.0.36",
     "@types/cookie-parser": "1.4.1",
     "@types/express": "4.17.0",
-    "@types/jest": "24.0.15",
+    "@types/jest": "24.0.16",
     "@types/lodash": "4.14.136",
     "@types/marked": "0.6.5",
     "@types/node": "10.12.24",
     "@types/serve-favicon": "2.2.30",
     "@vue/test-utils": "1.0.0-beta.28",
-    "@vuesion/service": "^3.0.0-alpha.6",
+    "@vuesion/service": "^3.0.0",
     "axios-mock-adapter": "1.17.0",
-    "husky": "3.0.1",
+    "husky": "3.0.2",
     "identity-obj-proxy": "3.0.0",
     "node-sass": "4.12.0",
     "ts-jest": "24.0.2",
