--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "cookie-parser": "1.4.4",
     "deepmerge": "4.0.0",
     "express": "4.17.1",
+    "helmet": "3.20.0",
     "lodash": "4.17.15",
     "lru-cache": "5.1.1",
     "marked": "0.7.0",
@@ -85,6 +86,7 @@
     "@types/compression": "0.0.36",
     "@types/cookie-parser": "1.4.1",
     "@types/express": "4.17.0",
+    "@types/helmet": "0.0.43",
     "@types/jest": "24.0.16",
     "@types/lodash": "4.14.136",
     "@types/marked": "0.6.5",
