chore: update contributors

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -218,6 +218,15 @@
       "contributions": [
         "design"
       ]
+    },
+    {
+      "login": "HeavenlyEntity",
+      "name": "Alec M",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/39228141?v=4",
+      "profile": "http://alecsoftolio.com",
+      "contributions": [
+        "doc"
+      ]
     }
   ]
 }
