--- a/package.json
+++ b/package.json
@@ -50,58 +50,58 @@
     "postci": "vuesion parallel \"npm run build\" \"npm run storybook:build\""
   },
   "dependencies": {
-    "@vuesion/addon-vuex-persist": "^3.1.2",
-    "@vuesion/models": "^3.1.2",
-    "@vuesion/utils": "^3.1.2",
-    "@vuesion/webpack": "^3.1.2",
+    "@vuesion/addon-vuex-persist": "^4.0.0-alpha.0",
+    "@vuesion/models": "^4.0.0-alpha.0",
+    "@vuesion/utils": "^4.0.0-alpha.0",
+    "@vuesion/webpack": "^4.0.0-alpha.0",
     "accept-language": "3.0.18",
     "animejs": "3.1.0",
     "axios": "^0.19.0",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
-    "config": "3.2.3",
+    "config": "3.2.4",
     "cookie-parser": "1.4.4",
-    "deepmerge": "4.1.1",
+    "deepmerge": "4.2.2",
     "express": "4.17.1",
-    "helmet": "3.21.1",
+    "helmet": "3.21.2",
     "lodash": "4.17.15",
     "lru-cache": "5.1.1",
-    "marked": "0.7.0",
+    "marked": "0.8.0",
     "serve-favicon": "2.5.0",
     "vee-validate": "2.0.9",
-    "vue": "^2.6.10",
-    "vue-i18n": "8.14.1",
+    "vue": "^2.6.11",
+    "vue-i18n": "8.15.3",
     "vue-meta": "2.3.1",
     "vue-router": "^3.1.3",
-    "vue-server-renderer": "^2.6.10",
-    "vuex": "^3.1.1",
+    "vue-server-renderer": "^2.6.11",
+    "vuex": "^3.1.2",
     "vuex-router-sync": "^5.0.0",
     "winston": "3.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
-    "@types/animejs": "2.0.2",
+    "@types/animejs": "3.1.0",
     "@types/body-parser": "1.17.1",
     "@types/compression": "1.0.1",
     "@types/cookie-parser": "1.4.2",
-    "@types/express": "4.17.1",
-    "@types/helmet": "0.0.44",
-    "@types/jest": "24.0.18",
-    "@types/lodash": "4.14.144",
-    "@types/marked": "0.6.5",
-    "@types/node": "10.12.24",
-    "@types/serve-favicon": "2.2.31",
+    "@types/express": "4.17.2",
+    "@types/helmet": "0.0.45",
+    "@types/jest": "24.0.24",
+    "@types/lodash": "4.14.149",
+    "@types/marked": "0.7.2",
+    "@types/node": "12.12.21",
+    "@types/serve-favicon": "2.5.0",
     "@vue/test-utils": "1.0.0-beta.28",
-    "@vuesion/addon-theme-switcher": "^3.1.2",
-    "@vuesion/service": "^3.1.2",
+    "@vuesion/addon-theme-switcher": "^4.0.0-alpha.0",
+    "@vuesion/service": "^4.0.0-alpha.0",
     "axios-mock-adapter": "1.17.0",
-    "husky": "3.0.8",
+    "husky": "3.1.0",
     "identity-obj-proxy": "3.0.0",
-    "node-sass": "4.12.0",
-    "ts-jest": "24.1.0",
-    "typescript": "3.6.4",
-    "vue-template-compiler": "^2.6.10"
+    "node-sass": "4.13.0",
+    "ts-jest": "24.2.0",
+    "typescript": "3.7.4",
+    "vue-template-compiler": "^2.6.11"
   },
   "engines": {
     "node": ">= 12.0.0",
