--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "extract-i18n-messages": "vuesion extract-i18n-messages",
     "test": "vuesion test --coverage",
     "e2e": "vuesion e2e",
-    "lint": "vuesion lint",
+    "lint": "vuesion lint --cache",
     "clean": "vuesion clean",
     "storybook:dev": "vuesion storybook --dev",
     "storybook:build": "vuesion storybook",
@@ -50,10 +50,10 @@
     "postci": "vuesion parallel \"npm run build\" \"npm run storybook:build\""
   },
   "dependencies": {
-    "@vuesion/addon-vuex-persist": "^4.0.0-alpha.0",
-    "@vuesion/models": "^4.0.0-alpha.0",
-    "@vuesion/utils": "^4.0.0-alpha.0",
-    "@vuesion/webpack": "^4.0.0-alpha.0",
+    "@vuesion/addon-vuex-persist": "^4.0.0-alpha.1",
+    "@vuesion/models": "^4.0.0-alpha.1",
+    "@vuesion/utils": "^4.0.0-alpha.1",
+    "@vuesion/webpack": "^4.0.0-alpha.1",
     "accept-language": "3.0.18",
     "animejs": "3.1.0",
     "axios": "^0.19.0",
@@ -93,8 +93,8 @@
     "@types/node": "12.12.21",
     "@types/serve-favicon": "2.5.0",
     "@vue/test-utils": "1.0.0-beta.28",
-    "@vuesion/addon-theme-switcher": "^4.0.0-alpha.0",
-    "@vuesion/service": "^4.0.0-alpha.0",
+    "@vuesion/addon-theme-switcher": "^4.0.0-alpha.1",
+    "@vuesion/service": "^4.0.0-alpha.1",
     "axios-mock-adapter": "1.17.0",
     "husky": "3.1.0",
     "identity-obj-proxy": "3.0.0",
