--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
-    "@testing-library/vue": "5.0.2",
+    "@testing-library/jest-dom": "^5.3.0",
+    "@testing-library/vue": "^5.0.2",
     "@types/animejs": "3.1.0",
     "@types/body-parser": "1.19.0",
     "@types/compression": "1.7.0",
@@ -130,6 +131,9 @@
     ],
     "setupFiles": [
       "<rootDir>/jestsetup.ts"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/.vuesion/jest.config.ts"
     ],
     "moduleFileExtensions": [
       "js",
