--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/jest": "^26.0.0",
     "@types/lodash": "^4.14.155",
     "@types/marked": "^0.7.4",
+    "@types/testing-library__jest-dom": "^5.9.1",
     "@vue/composition-api": "^0.6.3",
     "@vue/test-utils": "^1.0.0-beta.27",
     "@vuesion/utils": "^4.0.0-alpha.11",
