--- a/package.json
+++ b/package.json
@@ -56,23 +56,24 @@
     "@vue/test-utils": "^1.0.0-beta.27",
     "@vuesion/utils": "^4.0.0-alpha.11",
     "axios-mock-adapter": "^1.18.1",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^26.0.0",
-    "eslint": "^7.0.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.0.1",
+    "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.2",
     "flush-promises": "1.0.2",
     "husky": "^4.0.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.0.0",
+    "jest": "^26.0.1",
     "lint-staged": "^10.0.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.0",
     "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
-    "ts-jest": "25.4.0",
-    "vue-jest": "^4.0.0-beta.3"
+    "ts-jest": "^26.1.0",
+    "vue-jest": "^3.0.4"
   },
   "engines": {
     "node": ">= 12.0.0",
