fix: spa example config.json

--- a/.vuesion/config.json
+++ b/.vuesion/config.json
@@ -24,7 +24,7 @@
   },
   "spa": {
     "appShellRoute": "/",
-    "additionalRoutes": ["/form"]
+    "additionalRoutes": ["/example/form"]
   },
   "devServer": {
     "watchOptions": {
