refactor(design-system): update color-tokens and text-styles (#543)
closes #513

--- a/.vuesion/config.json
+++ b/.vuesion/config.json
@@ -8,5 +8,18 @@
   "clean": ["./dist", "./.nuxt", "./coverage", "./storybook-static", "./nuxt.config.js"],
   "prettier": {
     "extensions": "ts,vue,js,json,scss,sass,css,yaml,yml"
+  },
+  "i18n": {
+    "locales": [
+      {
+        "code": "en",
+        "file": "en.json"
+      },
+      {
+        "code": "de",
+        "file": "de.json"
+      }
+    ],
+    "defaultLocale": "en"
   }
 }
