--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
     "nuxt.js",
     "nuxt"
   ],
-  "author": "Johannes Werner <johannes.werner86@gmail.com>",
+  "author": "Johannes Werner <johannes.werner@hey.com>",
   "license": "MIT",
   "homepage": "https://github.com/vuesion/vuesion",
   "bugs": {
     "url": "https://github.com/vuesion/vuesion/issues"
   },
   "scripts": {
-    "dev": "nuxt-ts",
+    "dev": "nuxt -o",
     "generate": "vuesion generate",
-    "extract-i18n-messages": "vuesion extract-i18n-messages",
+    "extract-i18n-messages": "vuesion em -s -u -t",
     "test": "vuesion test --coverage",
     "test:watch": "vuesion test --coverage --watch",
     "e2e": "vuesion e2e",
@@ -44,61 +44,58 @@
     "release:major": "vuesion release --major",
     "release:minor": "vuesion release --minor",
     "release:patch": "vuesion release --patch",
-    "build": "nuxt-ts build",
-    "build:analyze": "nuxt-ts build --analyze",
-    "build:spa": "nuxt-ts generate",
-    "start": "nuxt-ts start",
+    "build": "nuxt build",
+    "build:analyze": "nuxt build --analyze",
+    "build:spa": "nuxt generate",
+    "start": "nuxt start",
     "e2e:ci": "npx start-server-and-test dev http://localhost:3000 e2e",
     "ci": "vuesion parallel \"npm run lint\" \"npm run test -- --runInBand\" \"npm run e2e:ci\"",
-    "postci": "vuesion parallel \"npm run build\" \"npm run storybook:build\""
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS",
-      "pre-commit": "vuesion prettier --staged && vuesion parallel \"npm run lint\" \"npm run test\""
-    }
+    "postci": "vuesion parallel \"npm run build\" \"npm run storybook:build\"",
+    "postinstall": "husky install"
   },
   "dependencies": {
-    "@nuxt/typescript-runtime": "2.0.0",
-    "@nuxtjs/auth-next": "5.0.0-1610115973.9fdaa66",
-    "@nuxtjs/axios": "5.12.5",
-    "@nuxtjs/composition-api": "0.18.0",
-    "@nuxtjs/pwa": "3.3.4",
-    "@vuesion/utils": "4.0.0-alpha.18",
-    "@vuesion/vuex-persist": "4.0.0-alpha.18",
+    "@nuxtjs/auth-next": "5.0.0-1613647907.37b1156",
+    "@nuxtjs/axios": "5.13.1",
+    "@nuxtjs/composition-api": "0.20.2",
+    "@nuxtjs/pwa": "3.3.5",
+    "@vuesion/utils": "4.0.0-beta.3",
+    "@vuesion/vuex-persist": "4.0.0-beta.3",
     "animejs": "3.2.1",
     "compression": "1.7.4",
     "cookie-parser": "1.4.5",
-    "helmet": "4.3.1",
-    "lodash": "4.17.20",
-    "marked": "1.2.7",
-    "nuxt": "2.14.12",
-    "nuxt-i18n": "6.17.0",
+    "express": "4.17.1",
+    "helmet": "4.4.1",
+    "lodash": "4.17.21",
+    "marked": "2.0.1",
+    "nuxt": "2.15.2",
+    "nuxt-i18n": "6.20.3",
     "vee-validate": "3.4.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "11.0.0",
-    "@commitlint/config-conventional": "11.0.0",
-    "@nuxt/types": "2.14.12",
-    "@nuxt/typescript-build": "2.0.3",
+    "@commitlint/cli": "12.0.1",
+    "@commitlint/config-conventional": "12.0.1",
+    "@nuxt/types": "2.15.2",
+    "@nuxt/typescript-build": "2.0.6",
     "@nuxtjs/eslint-config-typescript": "5.0.0",
     "@nuxtjs/eslint-module": "3.0.2",
-    "@testing-library/jest-dom": "5.11.8",
+    "@testing-library/jest-dom": "5.11.9",
     "@testing-library/vue": "5.6.1",
     "@types/animejs": "3.1.2",
+    "@types/compression": "1.7.0",
     "@types/cookie-parser": "1.4.2",
+    "@types/express": "4.17.11",
     "@types/jest": "26.0.20",
-    "@types/lodash": "4.14.167",
-    "@types/marked": "1.2.1",
+    "@types/lodash": "4.14.168",
+    "@types/marked": "1.2.2",
     "@types/testing-library__jest-dom": "5.9.5",
-    "@vue/test-utils": "1.1.2",
-    "@vuesion/service": "4.0.0-alpha.18",
-    "@vuesion/storybook-theme-switcher": "4.0.0-alpha.18",
+    "@vue/test-utils": "1.1.3",
+    "@vuesion/service": "4.0.0-beta.3",
+    "@vuesion/storybook-theme-switcher": "4.0.0-beta.3",
     "axios-mock-adapter": "1.19.0",
     "babel-core": "7.0.0-bridge.0",
     "eslint-plugin-nuxt": ">=2.0.0",
     "flush-promises": "1.0.2",
-    "husky": "4.3.7",
+    "husky": "5.1.1",
     "identity-obj-proxy": "3.0.0",
     "node-sass": "5.0.0"
   },
