ci(docker-file): add .vuesion folder

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,7 @@ jobs:
       - persist_to_workspace:
           root: ./
           paths:
+            - .vuesion
             - .nuxt
             - i18n
             - src
