--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,24 +17,26 @@
     "rootDirs": ["src"],
     "types": [
       "@nuxt/types",
-      "@nuxtjs/composition-api",
-      "@nuxtjs/axios",
+      "@nuxtjs/apollo",
       "@nuxtjs/auth-next",
+      "@nuxtjs/axios",
+      "@nuxtjs/composition-api",
       "@nuxtjs/pwa",
-      "node",
       "animejs",
       "cookie-parser",
       "compression",
+      "cypress",
       "express",
       "jest",
       "helmet",
       "lodash",
+      "node",
       "nuxt-i18n",
       "nuxt-winston-log",
       "testing-library__jest-dom"
     ]
   },
   "include": ["./src/**/*", "./src/**/*.vue"],
-  "exclude": ["node_modules", ".nuxt"],
+  "exclude": ["node_modules", ".nuxt", "src/interfaces/graphql/types.ts"],
   "files": ["src/vue-shim.d.ts", "src/custom-typings.d.ts", "src/vue.plugins.d.ts"]
 }
