--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "dev": "nuxt -o",
     "generate": "vuesion generate",
+    "type-gen:gql": "graphql-codegen",
     "extract-i18n-messages": "vuesion em -s -u -t",
     "test": "vuesion test --coverage",
     "test:watch": "vuesion test --coverage --watch",
@@ -54,23 +55,36 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "@apollo/client": "3.3.6",
+    "@graphql-codegen/cli": "1.20.1",
+    "@graphql-codegen/introspection": "1.18.1",
+    "@graphql-codegen/schema-ast": "1.18.1",
+    "@graphql-codegen/typescript": "1.20.2",
+    "@graphql-codegen/typescript-operations": "1.17.14",
+    "@nuxtjs/apollo": "4.0.1-rc.5",
     "@nuxtjs/auth-next": "5.0.0-1613647907.37b1156",
     "@nuxtjs/axios": "5.13.1",
     "@nuxtjs/composition-api": "0.20.2",
     "@nuxtjs/pwa": "3.3.5",
+    "@vue/apollo-composable": "4.0.0-alpha.12",
     "@vuesion/models": "4.0.0-beta.3",
     "@vuesion/utils": "4.0.0-beta.3",
     "@vuesion/vuex-persist": "4.0.0-beta.3",
     "animejs": "3.2.1",
+    "apollo-cache-inmemory": "1.6.6",
     "compression": "1.7.4",
     "cookie-parser": "1.4.5",
     "express": "4.17.1",
+    "form-data": "2.3.3",
+    "graphql": "15.4.0",
     "helmet": "4.4.1",
     "lodash": "4.17.21",
     "marked": "2.0.1",
+    "node-fetch": "2.6.1",
     "nuxt": "2.15.2",
     "nuxt-i18n": "6.20.3",
     "nuxt-winston-log": "1.2.0",
+    "react": "16.14.0",
     "vee-validate": "3.4.5"
   },
   "devDependencies": {
@@ -158,7 +172,8 @@
       "/services/",
       "/static/",
       "/test/",
-      "src/store/index.ts"
+      "src/store/index.ts",
+      "src/interfaces/graphql"
     ],
     "coverageThreshold": {
       "global": {
