--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@commitlint/config-conventional": "12.0.1",
     "@nuxt/types": "2.15.2",
     "@nuxt/typescript-build": "2.0.6",
+    "@nuxtjs/color-mode": "2.0.5",
     "@nuxtjs/eslint-config-typescript": "5.0.0",
     "@nuxtjs/eslint-module": "3.0.2",
     "@nuxtjs/html-validator": "0.4.0",
