feat: add modern build option as default

--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "release:major": "vuesion release --major",
     "release:minor": "vuesion release --minor",
     "release:patch": "vuesion release --patch",
-    "build": "nuxt build",
+    "build": "nuxt build --modern",
     "build:analyze": "nuxt build --analyze",
-    "build:spa": "nuxt generate",
+    "build:spa": "nuxt generate --modern",
     "start": "nuxt start",
     "e2e:ci": "npx start-server-and-test dev http://localhost:3000 e2e",
     "ci": "vuesion parallel \"npm run lint\" \"npm run test -- --runInBand\" && npm run e2e:ci",
